<resources>
    <string name="app_name">BusApp</string>

    // 시작화면 string
    <string name="start_logo">시작로고</string>
    <string name="text01">버튼을 눌러서 시작하세요</string>
    <string name="start_bt">시작하기</string>

    // 메인화면 string
    <string name="main_logo">메인로고</string>
    <string name="curr_time">현재시간</string>
    <string name="search_bus">버스찾기</string>
    <string name="start_text">출발지</string>
    <string name="arrival_text">도착지</string>
    <string name="mjbus_text">명지대역 버스</string>
    <string name="bus_text">시내버스</string>
</resources>